--- a/client/src/pages/profile/components/companion/companion.css
+++ b/client/src/pages/profile/components/companion/companion.css
@@ -4,6 +4,9 @@
     flex-shrink: 0;
     opacity: 0;
     transition: opacity 0.6s ease;
+    -webkit-tap-highlight-color: transparent;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .companion--loaded {
@@ -22,4 +25,6 @@
 .companion__canvas {
     width: 100%;
     height: 100%;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: none;
 }
